--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,10 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
- 
-  <groupId>com.kubernetes.app</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1</version>
+  ...
+  <groupId>com.example.projects</groupId>
+  <artifactId>documentedproject</artifactId>
+  <packaging>war</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>Kubernetes Project</name>
+  <url>ldap.linuxacademy.com</url>
+  ...
 </project>
