--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <project>
+  <modelVersion>4.0.0</modelVersion>
   <groupId>example</groupId>
   <artifactId>documentedproject</artifactId>
   <packaging>war</packaging>
